# Ilowav1.0.0

./: .gitignore  ARCHITECTURE.md  Anchor.toml  BUILD_SETUP.md  Cargo.toml  LICENSE  README.md  SECURITY_AUDIT.md  docker-compose.yml  netlify.toml
api/: .env.example  package.json  vercel.json
app/: .env.example  app.json  eas.json  metro.config.js  package-lock.json  package.json
app/scripts/: patch-base-x.js
app/src/: polyfills.ts
app/src/app/: _layout.tsx  governance.tsx  index.tsx
app/src/components/: AudioVisualizer.tsx  (+22 more)
backend/: .env.example  main.py  nillion_config.json  requirements.txt
backend/lib/: chain_adapter.py  dark_pool.py  nillion_client.py  quantum_crypto.py  storage_orchestrator.py
docs/: BACKEND_SETUP.md  DRIP_STRATEGY.md  RADIO_SETUP.md
landing/: index.html  netlify.toml  test.html
programs/ilowa/: Cargo.toml
programs/ilowa/src/: errors.rs  lib.rs
programs/ilowa/src/instructions/: arcium_mpc.rs  claim_winnings.rs  create_compressed_market.rs  create_market.rs  dapp_registry_add.rs  elder_guardian_init.rs  elder_guardian_recover.rs  light_market.rs  mint_voice_nft.rs  mod.rs  place_bet.rs  place_compressed_bet.rs  resolve_market.rs  shielded_bet.rs  social_recovery_approve.rs  social_recovery_init.rs  tip_dj.rs
programs/ilowa/src/state/: dapp_registry.rs  elder.rs  market.rs  mod.rs  rate_limit.rs  voice_nft.rs
programs/ilowa/tests/: integration.rs
scripts/: deploy.sh  vps-setup.sh
server/: .env.example  Dockerfile  index.ts  package-lock.json  package.json
supabase/migrations/: 001_initial_schema.sql  002_dark_pool.sql
(+120 files in other folders)
